--- a/index.html
+++ b/index.html
@@ -3,403 +3,110 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data: https:; font-src 'self' https://cdnjs.cloudflare.com; connect-src 'self' https: http://127.0.0.1:*; media-src 'self' http://127.0.0.1:* https:;">
   <title>Hominify - Müzik Uygulaması</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     :root {
-      --bg-color: #121212;
-      --sidebar-color: #000000;
-      --text-color: #ffffff;
-      --text-secondary: #b3b3b3;
-      --primary-color: #1DB954;
-      --card-bg: #181818;
-      --hover-color: #282828;
+      --bg-gradient: linear-gradient(180deg,#0b0b0d 0%, #121217 60%);
+      --panel: rgba(255,255,255,0.03);
+      --muted: #b3b3b3;
+      --accent-start: #ff6ec7;
+      --accent-end: #7a5cff;
+      --card: rgba(255,255,255,0.02);
+      --glass: rgba(255,255,255,0.04);
+      --text: #eaeaea;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      height: 100vh;
-      display: grid;
-      grid-template-columns: 240px 1fr;
-      grid-template-rows: 64px 1fr 90px;
-      grid-template-areas:
-        "sidebar header"
-        "sidebar main"
-        "player player";
+      color:var(--text);
+      background:var(--bg-gradient);
+      -webkit-font-smoothing:antialiased;
+      display:grid;
+      grid-template-columns:240px 1fr;
+      grid-template-rows:72px 1fr auto;
+      grid-template-areas: "sidebar header" "sidebar main" "player player";
+      gap:20px;
+      padding:18px;
     }
 
     /* Sidebar */
-    .sidebar {
-      grid-area: sidebar;
-      background-color: var(--sidebar-color);
-      padding: 24px 12px;
-      overflow-y: auto;
-    }
-
-    .logo {
-      padding: 0 12px 18px;
-      font-size: 24px;
-      font-weight: bold;
-      color: var(--primary-color);
-    }
-
-    .nav-item {
-      display: flex;
-      align-items: center;
-      padding: 8px 12px;
-      margin: 4px 0;
-      border-radius: 4px;
-      color: var(--text-secondary);
-      text-decoration: none;
-      transition: all 0.2s;
-    }
-
-    .nav-item i {
-      margin-right: 16px;
-      font-size: 20px;
-    }
-
-    .nav-item:hover, .nav-item.active {
-      color: var(--text-color);
-      background-color: var(--hover-color);
-    }
-
-    .nav-item.active {
-      color: var(--primary-color);
-    }
-
-    .playlists {
-      margin-top: 24px;
-      padding-top: 16px;
-      border-top: 1px solid #282828;
-    }
-
-    .playlists h3 {
-      padding: 8px 12px;
-      font-size: 12px;
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      color: var(--text-secondary);
-    }
+    .sidebar{grid-area:sidebar;padding:20px;background:transparent}
+    .logo{font-weight:700;color:var(--accent-end);font-size:22px;margin-bottom:12px}
 
     /* Header */
-    .header {
-      grid-area: header;
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 0 32px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      z-index: 10;
+    .header{grid-area:header;display:flex;align-items:center;justify-content:space-between;padding:6px 20px;background:transparent}
+    .header-nav-button{background:transparent;border:none;color:var(--muted);padding:6px 12px;border-radius:999px;cursor:pointer}
+    .header-nav-button.active{color:var(--text);background:var(--glass)}
+    .search-bar{background:rgba(255,255,255,0.02);padding:8px 12px;border-radius:18px;display:flex;align-items:center;gap:8px}
+    .search-bar input{background:transparent;border:0;color:var(--text);outline:none}
+
+    /* Main content */
+    .main-content{grid-area:main;padding:24px;display:flex;justify-content:center;align-items:flex-start}
+    .content-card{width:100%;max-width:1120px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:28px;backdrop-filter:blur(6px);box-shadow:0 6px 30px rgba(0,0,0,0.6)}
+    .greeting h1{font-size:28px;margin-bottom:6px}
+    .greeting p{color:var(--muted);margin-bottom:18px}
+    .section{margin-top:18px}
+    .section-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
+    .section-title{font-size:16px}
+
+    .card-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:12px}
+    .card{background:var(--card);padding:12px;border-radius:8px}
+
+    /* Player (centered, glass) */
+    .player{
+      grid-area:player;
+      position:fixed;
+      left:50%;
+      transform:translateX(-50%);
+      bottom:18px;
+      width:calc(100% - 120px);
+      max-width:1120px;
+      height:78px;
+      background:linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      border-radius:14px;
+      display:flex;align-items:center;justify-content:space-between;padding:12px 18px;box-shadow:0 8px 30px rgba(10,10,10,0.6);
     }
 
-    .search-bar {
-      flex: 0 1 400px;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 20px;
-      padding: 8px 16px;
-      display: flex;
-      align-items: center;
-    }
+    .now-playing{display:flex;align-items:center;gap:14px;min-width:260px}
+    .now-playing-img{width:64px;height:64px;border-radius:8px;object-fit:cover;box-shadow:0 6px 18px rgba(0,0,0,0.6)}
+    .song-info{min-width:140px}
+    .song-title{font-weight:700}
+    .song-artist{color:var(--muted);font-size:13px}
 
-    .search-bar i {
-      color: var(--text-secondary);
-      margin-right: 8px;
-    }
+    .player-controls{flex:1;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:0 20px}
+    .control-buttons{display:flex;gap:12px;align-items:center}
+    .control-btn{background:transparent;border:none;color:var(--muted);padding:8px;border-radius:8px;cursor:pointer}
+    .control-btn.play-pause{background:linear-gradient(90deg,var(--accent-start),var(--accent-end));color:#fff;width:44px;height:44px;display:flex;align-items:center;justify-content:center;border-radius:10px}
 
-    .search-bar input {
-      background: transparent;
-      border: none;
-      color: white;
-      width: 100%;
-      outline: none;
-    }
+    .progress-container{display:flex;align-items:center;gap:12px;width:100%;max-width:560px}
+    .progress-bar{flex:1;height:6px;background:rgba(255,255,255,0.04);border-radius:6px;position:relative;overflow:hidden}
+    .progress{position:absolute;left:0;top:0;bottom:0;background:linear-gradient(90deg,var(--accent-start),var(--accent-end));width:30%}
+    .time{color:var(--muted);font-size:13px}
 
-    .user-menu {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-    }
- 
-    .spotify-login-btn {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      padding: 6px 12px;
-      border-radius: 16px;
-      border: 1px solid var(--primary-color);
-      color: var(--primary-color);
-      font-size: 13px;
-    }
+    .volume-controls{display:flex;align-items:center;gap:10px}
+    .volume-slider{width:110px}
 
-    .spotify-login-btn.connected {
-      background-color: var(--primary-color);
-      color: #000;
-    }
+    /* Scrollbar styling: thin, accented thumb */
+    html, body { overflow-x: hidden; }
+    .main-content, .sidebar, .content-card { overflow-x: hidden; }
+    .main-content { overflow-y: auto; max-height: calc(100vh - 160px); }
 
-    .spotify-login-btn i {
-      font-size: 16px;
-    }
+    ::-webkit-scrollbar { width: 10px; height: 10px; }
+    ::-webkit-scrollbar-track { background: transparent; }
+    ::-webkit-scrollbar-thumb { background: linear-gradient(180deg,var(--accent-start),var(--accent-end)); border-radius: 999px; }
+    ::-webkit-scrollbar-thumb:hover { opacity: 0.95; }
+    /* Firefox */
+    * { scrollbar-width: thin; scrollbar-color: var(--accent-end) transparent; }
 
-    .user-avatar {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      background-color: #535353;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 14px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    /* Main Content */
-    .main-content {
-      grid-area: main;
-      padding: 24px 32px;
-      overflow-y: auto;
-    }
-
-    .greeting {
-      margin-bottom: 24px;
-    }
-
-    .greeting h1 {
-      font-size: 32px;
-      margin-bottom: 8px;
-    }
-
-    .greeting p {
-      color: var(--text-secondary);
-    }
-
-    .section {
-      margin-bottom: 32px;
-    }
-
-    .section-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 16px;
-    }
-
-    .section-title {
-      font-size: 24px;
-    }
-
-    .see-all {
-      color: var(--text-secondary);
-      text-decoration: none;
-      font-size: 14px;
-      font-weight: 600;
-    }
-
-    .see-all:hover {
-      text-decoration: underline;
-      color: var(--text-color);
-    }
-
-    .card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-      gap: 24px;
-    }
-
-    .card {
-      background: var(--card-bg);
-      border-radius: 8px;
-      padding: 16px;
-      transition: all 0.3s ease;
-      cursor: pointer;
-    }
-
-    .card:hover {
-      background: #282828;
-    }
-
-    .card-img {
-      width: 100%;
-      aspect-ratio: 1;
-      border-radius: 4px;
-      margin-bottom: 16px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
-    }
-
-    .card-title {
-      font-size: 16px;
-      font-weight: 600;
-      margin-bottom: 8px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .card-text {
-      font-size: 14px;
-      color: var(--text-secondary);
-      line-height: 1.5;
-    }
-
-    /* Player */
-    .player {
-      grid-area: player;
-      background: #181818;
-      border-top: 1px solid #282828;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 16px;
-      z-index: 100;
-    }
-
-    .now-playing {
-      display: flex;
-      align-items: center;
-      width: 30%;
-    }
-
-    .now-playing-img {
-      width: 56px;
-      height: 56px;
-      border-radius: 4px;
-      margin-right: 12px;
-    }
-
-    .song-info {
-      min-width: 0;
-    }
-
-    .song-title {
-      font-size: 14px;
-      font-weight: 500;
-      margin-bottom: 4px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .song-artist {
-      font-size: 12px;
-      color: var(--text-secondary);
-    }
-
-    .player-controls {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 40%;
-    }
-
-    .control-buttons {
-      display: flex;
-      align-items: center;
-      margin-bottom: 8px;
-    }
-
-    .control-btn {
-      background: none;
-      border: none;
-      color: var(--text-secondary);
-      font-size: 16px;
-      margin: 0 8px;
-      cursor: pointer;
-      transition: all 0.2s;
-    }
-
-    .control-btn:hover {
-      color: var(--text-color);
-    }
-
-    .control-btn.play-pause {
-      background: white;
-      color: black;
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .control-btn.play-pause:hover {
-      transform: scale(1.05);
-      color: black;
-    }
-
-    .progress-container {
-      width: 100%;
-      display: flex;
-      align-items: center;
-    }
-
-    .time {
-      font-size: 11px;
-      color: var(--text-secondary);
-      min-width: 40px;
-      text-align: center;
-    }
-
-    .progress-bar {
-      flex: 1;
-      height: 4px;
-      background: #404040;
-      border-radius: 2px;
-      margin: 0 8px;
-      cursor: pointer;
-      position: relative;
-    }
-
-    .progress {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      background: var(--text-secondary);
-      border-radius: 2px;
-      width: 0%;
-    }
-
-    .volume-controls {
-      display: flex;
-      align-items: center;
-      width: 30%;
-      justify-content: flex-end;
-    }
-
-    .volume-slider {
-      width: 100px;
-      margin: 0 8px;
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      body {
-        grid-template-columns: 1fr;
-        grid-template-rows: 64px 1fr 90px;
-        grid-template-areas:
-          "header"
-          "main"
-          "player";
-      }
-
-      .sidebar {
-        display: none;
-      }
-
-      .search-bar {
-        display: none;
-      }
+    @media(max-width:900px){
+      body{grid-template-columns:1fr}
+      .sidebar{display:none}
+      .player{left:50%;width:calc(100% - 36px)}
+      .content-card{padding:18px}
     }
   </style>
 </head>
@@ -407,33 +114,6 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <div class="logo">Hominify</div>
-    <nav>
-      <a href="#" class="nav-item active">
-        <i class="fas fa-home"></i>
-        <span>Ana Sayfa</span>
-      </a>
-      <a href="#" class="nav-item">
-        <i class="fas fa-search"></i>
-        <span>Ara</span>
-      </a>
-      <a href="#" class="nav-item">
-        <i class="fas fa-book"></i>
-        <span>Kitaplığım</span>
-      </a>
-      <a href="#" class="nav-item">
-        <i class="fas fa-plus-square"></i>
-        <span>Çalma Listesi Oluştur</span>
-      </a>
-      <a href="#" class="nav-item">
-        <i class="fas fa-heart"></i>
-        <span>Beğenilen Şarkılar</span>
-      </a>
-      <a href="#" class="nav-item">
-        <i class="fas fa-download"></i>
-        <span>İndirilenler</span>
-      </a>
-    </nav>
-
     <div class="playlists" id="library-list">
       <!-- Spotify kitaplık burada dinamik olarak doldurulacak -->
     </div>
@@ -441,9 +121,16 @@
 
   <!-- Header -->
   <header class="header">
-    <div class="search-bar">
-      <i class="fas fa-search"></i>
-      <input type="text" placeholder="Ne dinlemek istersiniz?">
+    <div class="header-left">
+      <nav class="header-nav">
+        <button class="header-nav-button active">Müzik</button>
+        <button class="header-nav-button">Podcast'ler</button>
+        <button class="header-nav-button">Listeler</button>
+      </nav>
+      <div class="search-bar">
+        <i class="fas fa-search"></i>
+        <input type="text" placeholder="Ne dinlemek istersiniz?">
+      </div>
     </div>
     <div class="user-menu">
       <button class="control-btn spotify-login-btn">
@@ -459,14 +146,15 @@
 
   <!-- Main Content -->
   <main class="main-content">
-    <div class="greeting">
+    <div class="content-card">
+      <div class="greeting">
       <h1>İyi akşamlar</h1>
       <p>Bugün ne dinlemek istersiniz?</p>
     </div>
 
     <div class="section">
       <div class="section-header">
-        <h2 class="section-title">En son dinledikleriniz</h2>
+        <h2 class="section-title">Beğenilen Şarkılar</h2>
         <a href="#" class="see-all">TÜMÜNÜ GÖSTER</a>
       </div>
       <div class="card-grid" id="liked-tracks">
@@ -482,6 +170,7 @@
       <div class="card-grid" id="playlists-grid">
         <!-- Spotify çalma listeleri burada listelenecek -->
       </div>
+    </div>
     </div>
   </main>
 
@@ -503,14 +192,9 @@
         <button class="control-btn">
           <i class="fas fa-random"></i>
         </button>
-        <button class="control-btn">
-          <i class="fas fa-step-backward"></i>
-        </button>
+        <!-- Removed previous/next buttons as requested -->
         <button class="control-btn play-pause">
           <i class="fas fa-play"></i>
-        </button>
-        <button class="control-btn">
-          <i class="fas fa-step-forward"></i>
         </button>
         <button class="control-btn download-btn">
           <i class="fas fa-download"></i>
