--- a/index.html
+++ b/index.html
@@ -1190,6 +1190,98 @@
       font-weight: 600;
       transform: scale(1.02);
     }
+
+    /* Queue Panel */
+    .queue-panel {
+      position: fixed;
+      bottom: var(--player-height);
+      right: 0;
+      width: 350px;
+      max-height: 400px;
+      background: var(--glass-bg);
+      backdrop-filter: blur(20px);
+      border: 1px solid var(--border-color);
+      border-radius: 12px 12px 0 0;
+      display: none;
+      flex-direction: column;
+      z-index: 100;
+      overflow: hidden;
+    }
+
+    .queue-panel.active { display: flex; }
+
+    .queue-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 16px;
+      border-bottom: 1px solid var(--border-color);
+    }
+
+    .queue-header h3 {
+      font-size: 14px;
+      font-weight: 600;
+    }
+
+    .queue-list {
+      flex: 1;
+      overflow-y: auto;
+      padding: 8px;
+    }
+
+    .queue-item {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 8px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: all 0.2s;
+    }
+
+    .queue-item:hover { background: var(--bg-hover); }
+    .queue-item.playing { background: var(--bg-tertiary); }
+
+    .queue-item-img {
+      width: 40px;
+      height: 40px;
+      border-radius: 4px;
+      object-fit: cover;
+    }
+
+    .queue-item-info { flex: 1; min-width: 0; }
+
+    .queue-item-title {
+      font-size: 13px;
+      font-weight: 500;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .queue-item-artist {
+      font-size: 11px;
+      color: var(--text-secondary);
+    }
+
+    /* Video Panel (sağ panel yerine) */
+    .video-container {
+      width: 100%;
+      aspect-ratio: 16/9;
+      background: #000;
+      border-radius: 12px;
+      overflow: hidden;
+      margin-bottom: 16px;
+      display: none;
+    }
+
+    .video-container.active { display: block; }
+
+    .video-container iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
   </style>
 </head>
 <body>
@@ -1491,6 +1583,19 @@
     <h3><i class="fas fa-microphone-lines"></i> Şarkı Sözleri</h3>
     <div id="lyrics-content">
       <!-- Lyrics will be rendered here -->
+    </div>
+  </div>
+
+  <!-- Queue Panel -->
+  <div class="queue-panel" id="queue-panel">
+    <div class="queue-header">
+      <h3><i class="fas fa-bars-staggered"></i> Sıradaki Şarkılar</h3>
+      <button class="settings-close" id="queue-close">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+    <div class="queue-list" id="queue-list">
+      <!-- Queue items will be rendered here -->
     </div>
   </div>
 
